k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: money-keeper
  labels:
    name: money-keeper
