k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-keeper-frontend
  namespace: money-keeper
  labels:
    app: money-keeper-frontend
spec:
  replicas: 0
  selector:
    matchLabels:
      app: money-keeper-frontend
  template:
    metadata:
      labels:
        app: money-keeper-frontend
    spec:
      containers:
      - name: frontend
        image: money-keeper-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80 # Port 5173 for the container
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /
            port: 80 # Liveness probe on port 5173
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
