k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: money-keeper-frontend-service
  namespace: money-keeper
  labels:
    app: money-keeper-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80 # Port 80 for external access, target port 5173 for the container
    protocol: TCP
    name: http
  selector:
    app: money-keeper-frontend
